dts/testData/inspections/container/NodeRootNode.dts
/ {
    <error descr="Not a valid node entry">/</error> {};
};